2008-02-14  Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/ObjectSelector/* : #1744: src/ObjectSelector is not used anmyore
    * src/TreeViews/* : #1744: src/TreeViews is not used anmyore
    * src/Treetips.py : changed class comment. pep8 fix for doc: ''' --> """
    * src/plugins/SoundGen.py: remove ... in menu. imports cleanup

2008-02-14  Peter Landgren  <peter.talken@telia.com>
    * src/plugins/DefaultGramplets.py: fixed two strings to be translatabel

2008-02-14 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DisplayModels/_NoteModel.py: use unicode object internally, #1739

2008-02-13  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DataViews/GrampletView.py: right-click on name link edits
	* src/plugins/DefaultGramplets.py: change tooltip of relation gramplet
	to indicate the right-click edit option

2008-02-13 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DataViews/GrampletView.py: Gramplet key for detached min size
	* src/plugins/DefaultGramplets.py: RelativesGramplet detached size

2008-02-13 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DataViews/GrampletView.py: minor change
	* src/plugins/DefaultGramplets.py: new RelativesGramplet
	  Response to issue #1758

2008-02-13 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/WritePkg.py: add callback=None, issue #1398

2008-02-13 Benny Malengier <benny.malengier@gramps-project.org>
	* po/POTFILES.in: remove checkpoint.glade

2008-02-13 Peter Landgren <peter.talken@telia.com>
    *src/BaseDoc.py: Removal on debug print

2008-02-12 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DisplayTabs/_ButtonTab.py: some accel keys don't work on keyboard
	with numlock as MOD_MASK2, enable the keys for those keyboards

2008-02-12 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DisplayTabs/_EmbeddedList.py: allow to define middle click
	* src/Editors/_EditFamily.py: middle click on child calls edit child
